# noarr-tuning

include/noarr/tuning/formatters/: opentuner_subproc.hpp
tests/opentuner_subproc_test/: CMakeLists.txt  run_direct.sh  test_direct.cpp
